syntax = "proto3";

option csharp_namespace = "GrpcDADTKVClient";

package dadtkv;

service DADTKV {
  rpc SayHello (HelloRequest) returns (HelloReply);
}

message HelloRequest {
  string name = 1;
}

message HelloReply {
  string message = 1;
}
