syntax = "proto3";

option csharp_namespace = "GrpcDADTKV";

package dadtkv;

service LeaseManagerService {
  rpc ObtainLease (ObtainLeaseRequest) returns (ObtainLeaseReply);
}

message ObtainLeaseRequest {
  string ObtainLeaseReply = 1;
  repeated string permissions = 2;
}

message ObtainLeaseReply {}